--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ on:
         description: 'Branch/tag'
         required: true
   schedule:
-    - cron: 0 2 * * 2
+    - cron: 0 2 * * *
 
 jobs:
   build:
